# market_researcher

./: README.md  bse_report.md  mcqs.md  pyproject.toml  report.md  upsc_notes.md
src/market_researcher/: crew.py  llm_azure.py  main.py
src/market_researcher/config/: agents.yaml  tasks.yaml
src/market_researcher/tools/: custom_tool.py
